/*
Protobuf definition for the graph Statistics.
During the loading some statistics are collected about the graph.
They can be useful for the translator to generate better Join Trees.
@author: Matteo Cossu
*/

syntax = "proto3";

message TableStats {
    string name = 1;
    int32 size = 2; // number of elements
    bool isComplex = 3; // if for the same subject exist more values
    int32 distinctSubjects = 4; // distinct subjects in that table
    bool isInverseComplex = 5;
}

message Graph {
    string name = 1;
    bool arePrefixesActive = 2;
    repeated TableStats tables = 3;
     
}
